--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Configurar GitHub Pages
         uses: actions/configure-pages@v4
 
-      - name: Fazer upload do conteúdo (site/)
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload do artefato para deploy
+        uses: actions/upload-pages-artifact@v3  # versão ATUAL e suportada
         with:
           path: site/
 
